initial-commit-bike-tracker

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     padding: 0px
   }
   #wrapper {
-    position: absolute;
+    position: relative;
     top: 80%;
     left: 5%;
     width: 50%;
@@ -775,4 +775,3 @@ float:right;
 
   </body>
   </html>
-  
