--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     padding-bottom: 3px;
     border: 1px solid #999;
   }
-  #input-panel {left: 50%;margin-left: 10px;width:100%;}
+  #input-panel {left: 50%;margin-left: 10px;width:100%;height:1em;}
   .output-panel {margin-left: 5em;margin-top: 1em}
   .controls {
     width: 40%;
