initial-commit-bike-tracker

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     padding: 0px
   }
   #wrapper {
-    position: relative;
     top: 80%;
     left: 5%;
     width: 50%;
@@ -32,7 +31,7 @@
     padding-bottom: 3px;
     border: 1px solid #999;
   }
-  #input-panel {left: 50%;margin-left: 10px;width:100%;height:1em;}
+  #input-panel {left: 50%;margin-left: 10px;width:100%;}
   .output-panel {margin-left: 5em;margin-top: 1em}
   .controls {
     width: 40%;
@@ -174,6 +173,7 @@ float:right;
 
 
 <script>
+
 
 
 
@@ -774,3 +774,4 @@ float:right;
 
   </body>
   </html>
+  
