initial-commit-bike-tracker

--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@ float:right;
 
 
 /**/
+.container{
+  width: 100%;
+  margin: 0 auto;
+  margin-top:50px;
+}
+
 #map_container{
   position: relative;
 }
@@ -132,8 +138,10 @@ float:right;
     </div>
 
   </div>
+  <div class="container">
   <div id="map_container"></div>
   <div id="map-canvas"></div>
+  </div>
 </div>
 
 
