initial-commit-bike-tracker

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ float:right;
 .medium{height:60%; width:40%;   transition: all 900ms;}
 .large{ height:100%;width:100%;  transition: all 900ms;}
 
-
+body    {overflow-y:scroll;}
 
 
 
@@ -800,4 +800,3 @@ float:right;
 
   </body>
   </html>
-  
