initial-commit-bike-tracker

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ body    {overflow-y:scroll;}
 <body>
   <div id="wrapper">
     <div id="input-panel">
-      <input id="start" class="controls" type="text" placeholder="Start: ">
+      <input id="start" class="controls" type="text" placeholder="Start: "><br>
       <input id="end" class="controls" type="text" placeholder="End: ">
       <button id="go" class="controls" onclick="calcRoute(latLongArray);">Go!</button>
     </div>
