initial-commit-bike-tracker

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   }
   .output-panel {margin-left: 5em;margin-top: 1em}
   .controls {
-    width: 40%;
+    width: 60%;
     height:50%;
     font-size:1em;
   }
@@ -140,7 +140,7 @@ body    {overflow-y:scroll;}
     <div id="input-panel">
       <input id="start" class="controls" type="text" placeholder="Start: "><br>
       <input id="end" class="controls" type="text" placeholder="End: ">
-      <button id="go" class="controls" onclick="calcRoute(latLongArray);">Go!</button>
+      <button id="go"  onclick="calcRoute(latLongArray);">Go!</button>
     </div>
     <hr>
   </div>
