initial-commit-bike-tracker

--- a/index.html
+++ b/index.html
@@ -115,16 +115,21 @@ body    {overflow-y:scroll;}
 
 </style>
 <style>
-div.floating-menu {position:fixed;background:#fff4c8;border:1px solid #ffcc00;width:150px;z-index:100;}
-div.floating-menu a, div.floating-menu h3 {display:block;margin:0 0.5em;}
+.floating-menu {
+  position:fixed;
+  background:#fff4c8;
+  border:1px solid #ffcc00;
+  width:100%;
+  z-index:100;
+  }
+div.floating-menu a, div.floating-menu h3 {
+  display:block;
+  margin:0 0.5em;
+  }
 </style>
 <div class="floating-menu">
   <h3>Floating Menu</h3>
-  <a href="http://www.quackit.com/css/">CSS</a>
-  <a href="http://www.quackit.com/html/">HTML</a>
-  <a href="http://www.quackit.com/javascript/">JavaScript</a>
-  <a href="http://www.quackit.com/coldfusion/">ColdFusion</a>
-  <a href="http://www.quackit.com/myspace/codes/">MySpace Codes</a>
+
 </div>
 
 
@@ -138,6 +143,7 @@ div.floating-menu a, div.floating-menu h3 {display:block;margin:0 0.5em;}
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 </head>
 <body>
+  <div class="floating-menu">
   <div id="wrapper">
     <div id="input-panel">
       <input id="start" class="controls" type="text" placeholder="Start: "><br>
@@ -145,6 +151,7 @@ div.floating-menu a, div.floating-menu h3 {display:block;margin:0 0.5em;}
       <button id="go" class="controls" onclick="calcRoute(latLongArray);">Go!</button>
     </div>
   </div>
+</div>
   <div id="map-canvas"></div>
 
 
