--- a/index.html
+++ b/index.html
@@ -19,32 +19,12 @@
     margin: 0px;
     padding: 0px
   }
-  #wrapper {
-    top: 80%;
-    left: 5%;
-    width: 40%;
-    height:4em;
-    /*margin-left: -180px;*/
-    z-index: 5;
-    background-color: #fff;
-    padding: 0px;
-    padding-bottom: 3px;
-    border: 1px solid #999;
-  }
-  #input-panel {
-    left: 50%;
-    margin-left: 10px;
-    width:100%;
-    height:80%;
-  }
+
+
   .output-panel {margin-left: 5em;margin-top: 1em;
     position:absolute;
     z-index:6;}
-  .controls {
-    width: 60%;
-    height:50%;
-    font-size:1em;
-  }
+
   /*.wrapper>.input-panel( #start.controls #end.controls #go._ )*/
   /*gmaps*/
 
@@ -54,11 +34,7 @@
 
 
 
-  #go{
-    width:3em;
-    height:2em;
-    position:absolute;
-    z-index:6;}
+
 
 
   canvas{
@@ -106,18 +82,49 @@ body    {overflow-y:scroll;}
 
 
 
-/* fonts */
 
 
 
 
 
+/* google maps input menu*/
+#wrapper {
+  top: 80%;
+  left: 5%;
+  width: 90%;
+  height:4em;
+  /*margin-left: -180px;*/
+  z-index: 5;
+  background-color: #fff;
+  padding: 0px;
+  padding-bottom: 3px;
+  border: 1px solid #999;
+}
 
-</style>
-<style>
+
+
+#input-panel {
+  left: 50%;
+  margin-left: 10px;
+  width:100%;
+  height:80%;
+}
+
+
+.controls {
+  width: 60%;
+  height:50%;
+  font-size:1em;
+}
+
+#go{
+  width:3em;
+  height:2em;
+  position:absolute;
+  z-index:6;}
+
 .floating-menu {
   position:fixed;
-  background:#fff4c8;
   border:1px solid #ffcc00;
   width:100%;
   z-index:100;
