initial-commit-bike-tracker

--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@ button .buttonArrows{
   border: solid green 5px;
 }
 .controls {
-  width: 40%;
+  width: 140%;
   height: 100%;
+  font-size: 2em;
 }
 .textright {
   text-align: right;
@@ -879,4 +880,3 @@ width: 3em;
 
     </body>
     </html>
-    
