initial-commit-bike-tracker

--- a/index.html
+++ b/index.html
@@ -120,10 +120,7 @@ width: 3em;
     height: 2.3em;
     width: 40%;
   }
-  #go {
-    height: 4.6em;
-    width: 10%;
-  }
+
   #google-map-panel {
     height: 5em;
     margin: 0% 2% 0% 5%;
@@ -193,7 +190,7 @@ width: 3em;
     <div id="google-map-panel">
       <input id="start" class="controls" type="text" value="20 Queen Street, Melbourne, Victoria, Australia" placeholder="Start: ">
       <input id="end" class="controls" type="text" value="101 Collins Street, Melbourne, Victoria, Australia" placeholder="End: ">
-      <button id="go" class="buttonArrows">Find My Route</button>
+      <button id="go" class="controls">Find My Route</button>
     </div>
     <div id="google-map"></div>
     <!-- html slope canvas and gui -->
