initial-commit-bike-tracker

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ height: 3em;
 width: 3em;
 }*/
 
-@media all and (min-width: 1000px) {
+@media (min-width: 1000px) {
   .banner {
     margin: 2% 2% 2% 5%;
     text-align: center;
@@ -142,6 +142,10 @@ width: 3em;
     /*text-align: right;*/
     margin: 2% 2% 2% 5%;
   }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 1px) {
+  /* Styles */
 }
 /* Smartphones (portrait and landscape) ----------- */
 
