initial-commit-bike-tracker

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ button .buttonArrows{
 .controls {
   width: 140%;
   height: 100%;
-  font-size: 12em;
+  font-size: 2em;
 }
 .textright {
   text-align: right;
@@ -111,7 +111,9 @@ width: 3em;
     font-size: 5em;
   }
   /*directions button*/
-
+  .controls {
+    font-size: 1em;
+  }
   button .buttonArrows{
     width: 4em;
     height: 2em;
