initial-commit-bike-tracker

--- a/index.html
+++ b/index.html
@@ -271,9 +271,8 @@ only screen and (min-device-pixel-ratio: 1.5) {}
     </div>
   </div>
   <script>
-    // route finding javascipt code
+  //elevations.js
     // CANVAS------------------------------------------------------------
-
     function cc(a) {
       console.log(a)
     }
@@ -676,7 +675,7 @@ only screen and (min-device-pixel-ratio: 1.5) {}
 
 
 
-
+//------------------------------------------------------------routing
     //debug function
     function cc(a) {
       console.log(a)
