--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <body>
     <style>
+    body{margin:0;}
     h1 {
       text-align: center;
       font: bold 30px sans-serif;
@@ -336,9 +337,8 @@ max = Math.max;
 min = Math.min;
 round = Math.round;
 floor = Math.floor;
-document.body.style.margin = 0;
-canvas1.width = innerWidth - 10;
-canvas1.height = innerHeight - 10;
+canvas1.width = innerWidth -1;
+canvas1.height = innerHeight - 1;
 var f = 200,
   w2 = canvas1.width / 2,
   h2 = canvas1.height / 2,
