--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
   <meta charset="UTF-8">
 
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+<meta name="viewport" content="width=device-width">
 </head>
 <header>
 
   <body>
     <style>
+@media screen and (max-width: 1000px)
+{
+     .header .user-bar {
+         display:none;
+     }
+}
+
     body{margin:0;}
     h1 {
       text-align: center;
