--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
     p {
       margin-bottom: 20px;
     }
+    a{            text-decoration: none;
+}
     .modal:before {
       content: "";
       display: none;
